fixed: align font to the left side and added hr tags

--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -1,7 +1,6 @@
 .about {
   display: flex;
   flex-direction: column;
-  text-align: center;
   gap: 1rem;
 }
 
@@ -10,7 +9,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
   gap: 1rem;
 }
 
@@ -27,6 +25,7 @@
 
 .about__hr {
   border-color: var(--clr-slate800);
+  width: 60%;
 }
 
 .about__subtitle {
